Seamless: IFrame's padding isn't taken into account when calculating its height. https://bugs.webkit.org/show_bug.cgi?id=106167

Reviewed by Eric Seidel.

Source/WebCore:

IFrames rendered seamlessly don't currently calculate their height
correctly when padding is applied to the frame itself. This patch adds
padding calculations to RenderIFrame::layoutSeamlessly to ensure that
the seamless frame is correctly sized.

* rendering/RenderIFrame.cpp:
(WebCore::RenderIFrame::layoutSeamlessly):

LayoutTests:

* fast/frames/seamless/seamless-border-padding-expected.txt:
    Adjusts the previously failing expectations to the correct values.


Canonical link: https://commits.webkit.org/124387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138917 268f45cc-cd09-0410-ab3c-d52691b4dbfc